--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,19 @@ spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enabl=true
 spring.mail.properties.smtp.auth=true
-spring.security.user.name=user
-spring.security.user.password=1234
+
+
+#h2 console 활성화 및 경로 설정
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#h2 db 설정
+spring.datasource.url=jdbc:h2:~/test;
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+mybatis.type-aliases-package=com.otp.mapper
+mybatis.mapper-locations=mapper/*.xml
+
+
